--- a/styles/newspage-st.css
+++ b/styles/newspage-st.css
@@ -5,35 +5,32 @@
     margin-top: 2%;
     margin-bottom: 2%; 
 }
-h1 {padding: 1%}
-.new {
-
-    border-top: 2px black solid;
-}
+h1,h2 {padding: 1%}
+.new {border-top: 2px black solid;}
 .new img{border: 4px black solid;
-    border-radius: 8px}
-.new a {color: whitesmoke;}
-.new a:hover {color: whitesmoke;}
+    border-radius: 8px;margin-left: 1%}
+.container-fluid a {color: whitesmoke!important;}
+.container-fluid a:hover {color: whitesmoke;}
 .new >div {
     display: flex;
     align-items: center;
     padding: 2%
 }
-.new img {margin-left: 1%}
+
 .new-of-day {background-image: url(../assets/trilobit-1.jpg);
             background-size: cover;
             background-repeat: no-repeat;
             width: 100%;
             height: 25em;
             border: 4px black solid;
-            border-radius: 8px}
+            border-radius: 8px,}
 .new-of-day:hover {transform: scale(1.03);
                     transition-duration: .2s;
                     cursor: pointer;
 
 }
 .new-of-day p {padding: 2%;}
-@media (min-width: 576px) {
+@media (max-width: 767px) {
     .new img {display:none }
 }
 
@@ -44,10 +41,5 @@ h1 {padding: 1%}
 
 
 @media (min-width: 992px) {
-    .new img {display:block }
-}
 
-
-@media (min-width: 1200px) {
-   
 }
