--- a/styles/materials-st.css
+++ b/styles/materials-st.css
@@ -34,7 +34,7 @@ iframe {width:95% ;
     background: brown;
     border: 3px black solid;
     border-radius: 6px;
-    width: 10%;
+
     margin: 3%}
 .more:hover{
     box-shadow: 0px 0px 10px aliceblue;
@@ -43,12 +43,12 @@ iframe {width:95% ;
 footer {margin-top:2% }
 
 
-@media (min-width: 576px) {
-
+@media (max-width: 767px) {
+    .more {width: 25%;}
 }
 
 @media (min-width: 768px) { 
-   
+    .more {width: 10%;}
     
 }
 
