--- a/styles/about-st.css
+++ b/styles/about-st.css
@@ -3,7 +3,8 @@
     width:100%;
 
 }
-
+.row {margin:0!important;
+    width: 100%;}
 .navbar{border-bottom:2px black solid}
 .col-xs-12 {margin-top: 2%;
 margin-bottom: 2%;
