--- a/styles/about-st.css
+++ b/styles/about-st.css
@@ -15,29 +15,24 @@ h1 , p{padding: 2%
                 margin-bottom:7%}
 .container-fluid {background: linear-gradient(rgb(0,31,85),rgb(1,25,71));}
 body {color: whitesmoke!important}
-@media (max-width: 991px) {
+@media (max-width: 767px) {
     .col-xs-12 img{ width:50% ;}
     .navbar-brand a img {width:27%}
  }
 
 
-@media (min-width: 768px) {
-    
+@media (min-width: 768px) and (max-width: 991px){
+    .col-xs-12 img{ float: right;
+                width:40% ;}
+    .navbar-brand a img {width:27%}
+    .small-icons {width: 20%!important;}
  }
 
-@media (max-width: 991px) {
-   
-}
 
 @media (min-width: 992px) {
     .col-xs-12 img{width:20% ;
                 float: right}
-    .small-icons {width: 10%!important;}
+    .small-icons {width: 15%!important;}
     .navbar-brand a img {width:40%}
 
-}
-
-
-@media (min-width: 1200px) {
-   
 }
