--- a/styles/footer.css
+++ b/styles/footer.css
@@ -22,6 +22,7 @@ footer p, footer img{
 }
 ion-icon {margin-left: 5%;
     margin-right: 5%}
+ion-icon:hover {cursor: pointer;}
 footer img{
         width: 25%;
     }
